Fix katex overflow

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -62,3 +62,7 @@
   font-style: italic;
   text-align: center;
 }
+
+.katex-display {
+  overflow-x: auto;
+}
